# bxgis

./: .gitignore  .pdm-python  0010.用地_三调处理_初步基数转换.py  0010.用地_三调处理_字段修改并生成分项.py  0010.用地_根据地类名称生成编号.py  0010.用地_用地更新.py  0010.用地_用地更新_计算两可用地.py  0010.用地_用地更新_计算耕保量.py  0020.道路_道路更新.py  0030.设施_设施更新.py  0040.区域_区域更新.py  Pipfile  README.md  bxgis.ExportToCAD.pyt.xml  bxgis.TestTool.pyt.xml  bxgis.Tool.pyt.xml  bxgis.code-workspace  bxgis.pyt  bxgis.pyt.xml  dist.py  distForGIS10.py  dist_menu.py  pyproject.toml  requirements.txt  setup.py  test1  入库_单元.py  入库_工业片区.py  入库_控制线.py  入库_村庄建设边界.py  入库_用地.py  入库_用途分区.py  入库_街区街坊.py  入库_街区街坊分村.py  入库_规划地块.py  入库_设施.py  入库类.py  区域_区域更新.py  区域_区域检查.py  常用_导入从CAD.py  (+61 more)
#历史版本/: 拓扑_创建重叠检查拓扑_23.11.12.py  用地_格式化_三调字段修改_23.09.21.py  用地_计算调整类型_23.11.27.py
bxarcpy/: __init__.py  几何包.py  分析.py  图层文件类.py  图层类.py  地图类.py  基本对象包.py  字段类.py  工具包.py  工具集.py  布局类.py  常量.py  拓扑类.py  数据库类.py  文档包.py  文档类.py  枚举包.py  游标类.py  环境.py  环境包.py  类.py  要素包.py  要素数据集类.py  要素类.py  转换.py  通用类.py
bxarcpy/#历史版本/: 分析.py  数据管理.py  数据访问.py  环境.py  要素类_区域要素类.py  要素类_用地要素类_24.01.10.py  要素类_设施要素类_24.01.10.py  要素类_道路要素类.py  转换.py  配置.py
bxgis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
common/bxarcpy/: __init__.py  图层类.py  拓扑类.py  要素类.py
common/bxgeo/: __init__.py  _通用.py  点.py  线.py  转换.py  面.py
common/bxpandas/: __init__.py  test_bxpandas.py  数据序列.py  数据框架.py  类.py  (+4 more)
src/: bxarcpy  bxpandas  bxpy  bxshapely  dist.bat  setup.py  入库_街区街坊分村.py  常用_导入从CAD.py  用地_检查_基本农田是否被占.py  用地_用地更新.py  设施_设施更新_030远期预留.py  配置.py
test/: 1.py
入库/: 入库_单元.py  入库_局调入库.py  入库_工业片区.py  入库_控制线.py  入库_用地.py  入库_用途分区.py  入库_街区街坊.py  入库_设施.py
用地/: 用地_临时_计算调整类型.py  用地_分析_基本农田是否被占.py  用地_分析_计算两可用地.py  用地_基期_010初步基数转换.py  用地_生成用地现状图.py  用地_生成用地规划图.py  用地_计算_010所属区域.py  用地_计算_040性质名称与构成.py
(+417 files in other folders)
