[project]
name = "bxgis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "vanadis91", email = "vanadis91@163.com"},
]
dependencies = [
    "tqdm>=4.67.1",
    "shapely>=2.0.6",
    "pandas>=2.2.1",
    "shapely>=2.0.3",
    "sympy>=1.12",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "beautifulsoup4>=4.12.3",
    "colorama",
    "flask",
    "flask-cors",
    "flask-login",
    "json5>=0.10.0",
    "lxml",
    "psutil",
    "pyarmor",
    "pyinstaller",
    "pyjwt",
    "pymongo",
    "pySmartDL>=1.3.4",
    "pystray>=0.19.5",
    "pytest",
    "pyyaml>=6.0.2",
    "pyzipper>=0.3.6",
    "requests",
    "ruamel-yaml>=0.18.10",
    "schedule>=1.2.2",
    "selenium",
    "setuptools",
    "shortuuid",
    "tinydb",
    "tkinterdnd2>=0.3.0",
    "toml>=0.10.2",
    "tornado>=6.4.2",
    "tqdm",
    "waitress>=3.0.0",
    "watchdog>=4.0.1",
    "webdriver-manager>=4.0.1",
    "wheel",
    "xlrd>=2.0.1",
    "pymongo>=4.12.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "GPLv3"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pypinyin>=0.53.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
